--- a/src/Fatn.Prototype/Themes/FatnProtoTheme.xaml
+++ b/src/Fatn.Prototype/Themes/FatnProtoTheme.xaml
@@ -3,6 +3,8 @@
                     xmlns:prototype="clr-namespace:Fatn.Prototype">
     
     <Brush x:Key="Background">MidnightBlue</Brush>
+    <Brush x:Key="Highlight">DodgerBlue</Brush>
+    <Brush x:Key="Lowlight">SteelBlue</Brush>
     <Brush x:Key="Foreground">LightYellow</Brush>
     <FontFamily x:Key="PrimaryFont">UD Digi Kyokasho NP-B</FontFamily>
 
@@ -14,6 +16,24 @@
                               HorizontalAlignment="{Binding Path=HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
                               VerticalAlignment="{Binding Path=VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
         </Border>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="ButtonControlTemplate" TargetType="Button">
+        <Border BorderBrush="{TemplateBinding BorderBrush}"
+                BorderThickness="{TemplateBinding BorderThickness}"
+                Background="{Binding Path=Background, RelativeSource={RelativeSource AncestorType={x:Type Button}}}">
+            <ContentPresenter
+                HorizontalAlignment="{Binding Path=HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+                VerticalAlignment="{Binding Path=VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" />
+        </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="{StaticResource Highlight}" />
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" Value="{StaticResource Lowlight}" />
+            </Trigger>
+        </ControlTemplate.Triggers>
     </ControlTemplate>
 
     <Style TargetType="prototype:MainWindow">
@@ -41,6 +61,11 @@
     <Style TargetType="TextBlock">
         <Setter Property="Foreground" Value="{StaticResource Foreground}" />
         <Setter Property="FontFamily" Value="{StaticResource PrimaryFont}" />
+    </Style>
+
+    <Style TargetType="Button">
+        <Setter Property="Background" Value="{StaticResource Background}" />
+        <Setter Property="Template" Value="{StaticResource ButtonControlTemplate}" />
     </Style>
     
 </ResourceDictionary>
