--- a/src/Fatn.Avalonia/Views/MainWindow.axaml
+++ b/src/Fatn.Avalonia/Views/MainWindow.axaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Fatn.Avalonia.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Fatn.Avalonia">
+        Title="Fat~N">
 
     <Design.DataContext>
         <vm:MainWindowViewModel/>
