--- a/src/Fatn.Avalonia/Views/MainWindow.axaml
+++ b/src/Fatn.Avalonia/Views/MainWindow.axaml
@@ -12,6 +12,6 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+    <ContentPresenter DataContext="{Binding CurrentRootPage}" Content="{Binding}" />
+    
 </Window>
